@@ -60,6 +60,12 @@ cdr_syslog
 --- Functionality changes from Asterisk 15.2.0 to Asterisk 15.3.0 ------------
 ------------------------------------------------------------------------------
 
+Core
+------------------
+ * During dialplan reload log messages are produced for each context,
+   extension and include.  These messages are no longer printed by the
+   verbose loggers, they are now only logged as debug messages.
+
 app_followme
 ------------------
  * Added a new prompt, connecting-prompt, which will be played
